tests/compile-fail/rust_action_type_error.rs
extern crate peg;

peg::parser!(grammar foo() for str {
    rule foo() -> u32 = "a" { "a" } //~ ERROR
});

fn main() {}
